// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package google.aggregate.protos.frontend.api.v1;

import "protos/frontend/api/v1/error_count.proto";

option java_outer_classname = "ErrorSummaryProto";
option java_package = "com.google.aggregate.protos.frontend.api.v1";

/** Summary of errors to be provided to the requester as debugging information. */
message ErrorSummary {
  /** Count of errors by category. */
  repeated ErrorCount error_counts = 1;
  /** List of exceptions thrown when running the job. */
  repeated string error_messages = 2;
}
